--- a/B1W9O1-Handy-master/css/indexstyle.css
+++ b/B1W9O1-Handy-master/css/indexstyle.css
@@ -1,11 +1,11 @@
-* {
+§* {
     font-family: 'Archivo', sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 500;
 }
 
-
+ 
 
 
 
@@ -140,6 +140,7 @@ color: black;
     grid-row: 4/5;
     margin: 20px;
     width: 320px;
+    position: relative;
 }
 
 #item2 {
@@ -147,6 +148,7 @@ color: black;
     grid-row: 4/5;
     margin: 20px;
     width: 320px;
+    position: relative;
 }
 
 #item3 {
@@ -154,7 +156,95 @@ color: black;
     grid-row: 4/5;
     margin: 20px;
     width: 320px;
+    position: relative;
 }
+
+
+.items {
+    display: none;
+    font-size: 30px;
+}
+
+
+
+
+#item1:hover .items#geschiedenishover{
+display: block;
+background-color: black;
+color: white;
+opacity: 0.8;
+ position: absolute;
+ width: 300px;
+ height:130px; 
+ top:0;
+ text-align: center;
+ padding-top: 90px;
+
+
+}
+
+#item2:hover .items#dealshover{
+display: block;
+background-color: black;
+color: white;
+opacity: 0.8;
+ position: absolute;
+ width: 300px;
+ height:130px; 
+ top:0;
+ text-align: center;
+ padding-top: 90px;
+}
+
+#item3:hover .items#dienstenhover{
+display: block;
+background-color: black;
+color: white;
+opacity: 0.8;
+ position: absolute;
+ width: 300px;
+ height:130px; 
+ top:0;
+ text-align: center;
+ padding-top: 90px;
+
+
+}
+
+
+
+
+.hovertext {
+    display: none;
+     text-decoration: none;
+ color: black;
+ font-size: 30px;
+ opacity: 1;
+ position: absolute;
+ color: white;
+ top:0;
+  padding-left: 100px;
+ padding-top: 90px;
+}
+#item1:hover .hovertext  {
+     display: block;
+}
+
+#item2:hover .hovertext {
+     display: block;
+}
+
+#item3:hover .hovertext {
+     display: block;
+}
+
+.hovertext a{
+         text-decoration: none;
+ color: white;
+ font-size: 30px;
+}
+
+
 
 .wbo {
     font-size: 24px;
@@ -205,6 +295,14 @@ color: black;
     background-repeat: no-repeat;
     height: 413px
 }
+.footertekst{
+    color: rgb(26 31 37);
+    float: left;
+    margin-top: 20px;
+    margin-left: 15px;
+}
+
+
 
 .footerButtonTitle {
     padding-left: 10px;
@@ -214,18 +312,20 @@ color: black;
     position: absolute;
     top: -50px;
     grid-row: 8;
-    margin: 20px;
+
 }
 
 .footerButtonText {
     padding-left: 10px;
+    float: left;
     font-size: 14px;
     font-weight: 600;
     position: absolute;
     top: -25px;
     grid-row: 8;
-    margin: 20px;
 }
+
+
 
 
 
@@ -238,19 +338,53 @@ color: black;
 .button-container#button1 {
     grid-column: 2/3;
     grid-row: 8;
+}
+
+.button-container#button1 a.button {
     background-image: url('../img/handshake.svg');
     background-repeat: no-repeat;
+    background-size: 100px;
+    background-position: 20px 10px; 
+
 }
+.button-container#button1 a.footerButton1 {
+    padding-left: 130px;
+    display: inline-block;
+    }
 
 .button-container#button2 {
     grid-column: 3/4;
     grid-row: 8;
 }
 
+.button-container#button2 a.button {
+    background-image: url('../img/toolbox-solid.svg');
+    background-size: 75px;
+    background-repeat: no-repeat;
+    background-position: 20px 10px; 
+
+}
+.button-container#button2 a.footerButton2 {
+    padding-left: 100px;
+    display: inline-block;
+    }
+
 .button-container#button3 {
     grid-column: 4/5;
     grid-row: 8;
 }
+.button-container#button3 a.button {
+    background-image: url('../img/mail.svg');
+    background-size: 75px;
+    background-position: 20px 10px; 
+    background-repeat: no-repeat;
+    
+
+}
+.button-container#button3 a.footerButton3 {
+    padding-left: 100px;
+    display: inline-block;
+    }
 
 .button-container .button {
     height: 100px;
@@ -260,8 +394,26 @@ color: black;
     width: 300px;
     margin: 20px;
     grid-row: 8;
+    font-weight: bold;
 }
 
+.button-container:hover .button{
+    height: 100px;
+    position: absolute;
+    top: -75px;
+    width: 300px;
+    margin: 20px;
+    grid-row: 8;
+    color: white;
+    filter: invert(100%) contrast(100%) saturate(15%);
+}
+
+.button-container:hover .footerButton1 .footertekst,
+.button-container:hover .footerButton2 .footertekst,
+.button-container:hover .footerButton3 .footertekst
+{
+    color: white;
+    }
 
 .witbalk {
     height: 100px;
@@ -304,7 +456,7 @@ color: black;
     padding-top: 75px;
     grid-row: 10/11;
     grid-column: 4/5;
-    padding-right: 100px;
+    padding-right: 50px;
     margin: 20px;
 }
 
